[project]
name = "python_unit_generator"
version = "0.0.1"
authors = [
  { name="Roman Matveev", email="dazyra@gmail.com" },
]
description = "generate unit tests for python code"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/RomanMIzulin/python_unit_generator"
"Bug Tracker" = "https://github.com/RomanMIzulin/python_unit_generator/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
