[project]
name = "python-unit-generator"
version = "0.0.2"
authors = [
  { name="Roman Matveev", email="dazyra@gmail.com" },
]
description = "generate unit tests for python code"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
[project.urls]
"Homepage" = "https://github.com/RomanMIzulin/python_unit_generator"
"Bug Tracker" = "https://github.com/RomanMIzulin/python_unit_generator/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.python_unit_generator]
root_directory = "python_units"
